--- a/packages/css/src/components/navbar.css
+++ b/packages/css/src/components/navbar.css
@@ -138,7 +138,7 @@
     &::before {
       content: var(--navbar-hamburger-icon-content);
       font-size: var(--navbar-hamburger-icon-size);
-      line-height: var(--line-height-none);
+      line-height: var(--line-height-one);
     }
 
     &[aria-expanded="true"] {
