--- a/packages/css/src/components/card.css
+++ b/packages/css/src/components/card.css
@@ -1,7 +1,7 @@
 .m-card {
   --card-floating-shadow: var(--shadow-sm);
   --card-radius: var(--radius-md);
-  --card-bg-color: var(--color-white);
+  --card-bg-color: var(--color-bg-default);
   --card-border-color: var(--color-border);
   --card-content-padding: var(--spacing-2);
   --card-footer-flex-direction: row;
