--- a/packages/css/src/components/navbar.css
+++ b/packages/css/src/components/navbar.css
@@ -1,24 +1,24 @@
 .m-navbar {
-  --navbar-bg-color: var(--color-bg-light);
+  --navbar-bg-color: var(--color-bg-default);
   --navbar-min-height: 56px;
   --navbar-item-padding: var(--spacing-2) var(--spacing-3);
   --navbar-item-gap: var(--spacing-2);
-  --navbar-item-text-color: var(--color-text);
+  --navbar-item-text-color: var(--color-text-default);
   --navbar-item-hover-bg-color: var(--color-primary);
-  --navbar-item-hover-text-color: var(--color-text-light);
+  --navbar-item-hover-text-color: var(--color-text-inverse);
   --navbar-hamburger-icon-content: "☰";
   --navbar-hamburger-icon-close-content: "×";
   --navbar-hamburger-icon-size: 1.5rem;
   --navbar-hamburger-icon-padding: 0 var(--spacing-2);
-  --navbar-hamburger-icon-color: var(--color-text);
+  --navbar-hamburger-icon-color: var(--color-text-default);
   --navbar-hamburger-icon-hover-bg-color: color(from var(--navbar-bg-color) srgb calc(r * 0.8) calc(g * 0.8) calc(b * 0.8));
   --navbar-hamburger-icon-border-radius: var(--radius-sm);
   --navbar-hamburger-menu-size: 2.5rem;
-  --navbar-hamburger-menu-bg-color: var(--color-bg-light);
-  --navbar-hamburger-menu-border: 2px solid var(--color-bg-light);
+  --navbar-hamburger-menu-bg-color: var(--color-bg-default);
+  --navbar-hamburger-menu-border: 2px solid var(--color-bg-default);
   --navbar-hamburger-menu-border-radius: 0 0 var(--radius-sm) var(--radius-sm);
   --navbar-hamburger-menu-box-shadow: var(--shadow-md);
-  --navbar-hamburger-menu-item-separate-border: 1px solid var(--color-bg-light);
+  --navbar-hamburger-menu-item-separate-border: 1px solid var(--color-bg-default);
   --navbar-base-zindex: var(--zindex-navbar);
   --navbar-backdrop-zindex: calc(var(--navbar-base-zindex) + 1);
   --navbar-menu-zindex: calc(var(--navbar-backdrop-zindex) + 1);
