--- a/packages/css/src/components/radio.css
+++ b/packages/css/src/components/radio.css
@@ -1,7 +1,7 @@
 input[type="radio"].m-radio {
   --radio-size: 1em;
-  --radio-border-color: var(--color-dark);
-  --radio-bg-color: var(--color-light);
+  --radio-border-color: var(--color-text-default);
+  --radio-bg-color: var(--color-bg-muted);
   --radio-lighter-brightness: 150%;
   --radio-disabled-opacity: 0.65;
 
@@ -32,7 +32,7 @@ input[type="radio"].m-radio {
   }
 
   &:checked {
-    background-color: var(--color-text-light);
+    background-color: var(--color-text-inverse);
     transition: background-color 0.2s ease;
 
     &::after {
