--- a/packages/css/src/components/snackbar.css
+++ b/packages/css/src/components/snackbar.css
@@ -4,7 +4,7 @@
   --snackbar-zindex: var(--zindex-snackbar);
   --snackbar-margin-for-small-screens: var(--spacing-2);
   --snackbar-bg-color: var(--color-primary);
-  --snackbar-text-color: var(--color-text-light);
+  --snackbar-text-color: var(--color-text-inverse);
   --snackbar-border-radius: var(--radius-sm);
   --snackbar-box-shadow: var(--shadow-md);
   --snackbar-inner-spacing: var(--spacing-3);
