--- a/packages/css/src/foundation/base.css
+++ b/packages/css/src/foundation/base.css
@@ -3,7 +3,7 @@
 html {
   font-family: var(--font-family-base);
   line-height: var(--text-base--line-height);
-  color: var(--color-text);
+  color: var(--color-text-default);
 }
 
 body {
