--- a/packages/css/src/foundation/base.css
+++ b/packages/css/src/foundation/base.css
@@ -2,11 +2,12 @@
 
 html {
   font-family: var(--font-family-base);
+  font-size: var(--text-base);
   line-height: var(--text-base--line-height);
-  color: var(--color-text-default);
 }
 
 body {
-  font-size: var(--text-base);
   font-weight: var(--font-weight-normal);
+  color: var(--color-text-default);
+  background-color: var(--color-bg-default);
 }
