--- a/packages/css/src/components/alert.css
+++ b/packages/css/src/components/alert.css
@@ -31,8 +31,8 @@
 .m-alert {
   --alert-bg-color: var(--color-default);
   --alert-text-color: var(--color-text-default);
-  --alert-border-color: var(--color-border);
-  --alert-border: 1px solid var(--color-border);
+  --alert-border-color: var(--color-default);
+  --alert-border: 1px solid var(--alert-border-color);
   --alert-padding: var(--spacing-2);
   --alert-item-gap: var(--spacing-2);
   --alert-icon-size: 1rem;
