--- a/packages/css/src/components/dialog.css
+++ b/packages/css/src/components/dialog.css
@@ -1,4 +1,5 @@
 dialog.m-dialog {
+  --dialog-text-color: var(--color-text-default);
   --dialog-bg-color: var(--color-bg-default);
   --dialog-zindex: var(--zindex-modal);
   --dialog-padding: var(--spacing-3);
@@ -10,6 +11,7 @@ dialog.m-dialog {
   --dialog-transition-duration: 0.2s;
   --dialog-transition-transform-start: translateY(20%);
 
+  color: var(--dialog-text-color);
   background-color: var(--dialog-bg-color);
   z-index: var(--dialog-zindex);
   padding: var(--dialog-padding);
