--- a/packages/css/src/foundation/variables/color/semantic.css
+++ b/packages/css/src/foundation/variables/color/semantic.css
@@ -26,4 +26,29 @@
   /* other */
   --color-border: var(--color-gray-300);
   --color-overlay: rgb(from var(--color-gray-950) r g b / 50%);
+
+  /* Dark mode */
+  &[data-theme="dark"] {
+    /* brand */
+    --color-default: var(--color-gray-600);
+    --color-primary: var(--color-emerald-500);
+    --color-secondary: var(--color-emerald-600);
+    --color-tertiary: var(--color-emerald-700);
+
+    /* status */
+    --color-danger: var(--color-red-700);
+    --color-warning: var(--color-yellow-700);
+
+    /* text */
+    --color-text-default: var(--color-neutral-100);
+    --color-text-subtle: var(--color-neutral-300);
+    --color-text-muted: var(--color-neutral-500);
+    --color-text-inverse: var(--color-neutral-900);
+
+    /* background */
+    --color-bg-default: var(--color-neutral-800);
+    --color-bg-subtle: var(--color-neutral-700);
+    --color-bg-muted: var(--color-neutral-600);
+    --color-bg-inverse: var(--color-neutral-50);
+  }
 }
